bugfix: Move the dropdown menu down to ensure full visibility of the header

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,6 +1,6 @@
 :root {
     --header-height-desktop: 72px;
-    --header-height-mobile: 64px;
+    --header-height-mobile: 72px;
 }
 
 
